--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ body {
   margin-top: 2rem;
 }
 
+#message {
+  color: rgb(167, 7, 28);
+  padding-bottom: 10px;
+}
 h1 {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -36,12 +40,22 @@ button {
   width: 200px;
   margin-bottom: 5px;
   border-radius: 5px;
-}
-
-#increment-btn {
+  cursor: pointer;
   background: darkred;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
 }
 
-#save-btn {
+.button2 {
   background: darkgreen;
+}
+
+.button1:hover {
+  /* cursor: pointer; */
+  background-color: rgb(64, 14, 14);
+}
+.button2:hover {
+  /* cursor: pointer; */
+  background-color: rgb(6, 66, 17);
 }
